--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <div class="info">
         <div id="guide-box">
-          <p id="guide-text">press arrow keys to start hoe!</p>
+          <p id="guide-text">press arrow keys to start bitch!</p>
         </div>
       </div>
       <div class="control-buttons">
